[package]
name = "rust-ops"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_ops"
crate-type = ["cdylib"]

[dependencies]
accelerate-src = { version = "0.3", optional = true }
ndarray = { version = "0.15", features = ["blas"] }
numpy = "0.16"
pyo3 = { version = "0.16", features = ["extension-module", "abi3", "abi3-py37"] }
simd-array = { path = "simd-array" }

[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = { version = "0.3" }

[target.'cfg(target_os = "windows")'.dependencies]
# Fix incompatibility between anyhow and intel-mkl tool. Remove with
# the next release of intel-mkl too. For more information, see:
# https://github.com/rust-math/intel-mkl-src/issues/68
anyhow = { version = "<=1.0.48", optional = true }
intel-mkl-src = { version = "0.6" }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
blis-src = { version = "0.2", default-features = false, features = ["serial", "cblas", "static"] }

[package.metadata.maturin]
python-source = "python"
