[package]
name = "simd-array"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned = "0.4"
as-slice = "0.2"
ndarray = "0.15"
num-traits = "0.2"
thiserror = "1"

[dev-dependencies]
approx = "0.5"
criterion = "0.3"
libm = "0.2"
ndarray = "0.15"
ndarray-rand = "0.14"
ordered-float = "3"
quickcheck = "1"
quickcheck_macros = "1"

[[bench]]
name = "slice"
harness = false